--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
 		"lint-fix": "eslint -c .eslintrc --fix  --ext .js --ext .jsx src"
 	},
 	"dependencies": {
-		"lodash": "^4.17.10",
+		"axios": "^0.18.0",
+		"file-loader": "^2.0.0",
+		"history": "^4.7.2",
 		"mobx": "^5.6.0",
 		"mobx-react": "^5.3.6",
+		"mobx-react-router": "^4.0.5",
+		"mobx-remotedev": "^0.2.8",
 		"prettier": "^1.15.2",
+		"prop-types": "^15.6.2",
 		"react": "^16.2.0",
 		"react-dom": "^16.3.2",
-		"react-router-dom": "^4.2.2"
+		"react-md-spinner": "^0.3.0",
+		"react-router-dom": "^4.3.1",
+		"webpack-api-mocker": "^1.5.16"
 	},
 	"devDependencies": {
 		"babel-core": "^6.24.0",
@@ -39,6 +46,7 @@
 		"html-webpack-plugin": "^3.2.0",
 		"i18next-scanner": "^2.4.6",
 		"jest": "^22.0.5",
+		"mobx-react-devtools": "^6.0.3",
 		"node-sass": "^4.7.2",
 		"react-hot-loader": "^4.3.4",
 		"sass-loader": "^6.0.6",
