added styles to all app components
Signed-off-by: Yarin Dekel <yarind@amdocs.com>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "lpPayments",
 	"scripts": {
-		"dev": "webpack-dev-server",
+		"dev": "webpack-dev-server --host 0.0.0.0",
 		"build": "webpack",
 		"test": "jest",
 		"test-dev": "jest --watch",
