--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["react"],
+  "presets": ["es2015", "react"],
   "plugins":
   ["transform-decorators-legacy",
     "transform-class-properties",
