--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
 	"name": "lpPayments",
 	"scripts": {
-		"dev": "webpack-dev-server --host 0.0.0.0",
-		"build": "webpack",
+		"start": "webpack-dev-server --mode development",
+		"build": "webpack --mode production",
 		"test": "jest",
 		"test-dev": "jest --watch",
-		"lint-fix": "eslint -c .eslintrc --fix  --ext .js --ext .jsx src"
+		"lint-fix": "eslint --fix  --ext .js src"
 	},
 	"dependencies": {
 		"axios": "^0.18.0",
+		"babel-preset-es2015": "^6.24.1",
 		"file-loader": "^2.0.0",
 		"history": "^4.7.2",
+		"jest": "^23.6.0",
 		"mobx": "^5.6.0",
 		"mobx-react": "^5.3.6",
 		"mobx-react-router": "^4.0.5",
-		"mobx-remotedev": "^0.2.8",
 		"prettier": "^1.15.2",
 		"prop-types": "^15.6.2",
 		"react": "^16.2.0",
@@ -34,8 +35,9 @@
 		"babel-plugin-transform-runtime": "^6.22.0",
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-react": "^6.23.0",
-		"clean-webpack-plugin": "^0.1.19",
 		"css-loader": "^0.23.1",
+		"enzyme": "^3.7.0",
+		"enzyme-adapter-react-16": "^1.7.0",
 		"eslint": "^4.18.1",
 		"eslint-config-prettier": "^2.9.0",
 		"eslint-loader": "^2.0.0",
@@ -44,11 +46,7 @@
 		"eslint-plugin-prettier": "^2.6.0",
 		"eslint-plugin-react": "^7.7.0",
 		"html-webpack-plugin": "^3.2.0",
-		"i18next-scanner": "^2.4.6",
-		"jest": "^22.0.5",
-		"mobx-react-devtools": "^6.0.3",
 		"node-sass": "^4.7.2",
-		"react-hot-loader": "^4.3.4",
 		"sass-loader": "^6.0.6",
 		"source-map-loader": "^0.1.5",
 		"webpack": "^4.5.0",
